# fountain-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
cf-worker/: Cargo.toml
cf-worker/src/: lib.rs
cf-worker/worker/: worker.js
fountain/: Cargo.toml  README.md
fountain-cli/: Cargo.toml
fountain-cli/src/: error.rs  main.rs  style.css
fountain-wrangler/: Cargo.toml  test.json
fountain-wrangler/src/: lib.rs
fountain/src/: data.rs  html.rs  lib.rs  parse.rs  utils.rs
frontend/: elm.json  package.json
frontend/src/: Main.elm  index.html  index.js  styles.scss
frontend/tests/: Example.elm
frontend/workers-site/: index.js
