[package]
name = "fountain-cli"
version = "0.1.0"
authors = ["Adam Chalmers <adam.s.chalmers@gmail.com>"]
edition = "2018"
description = "A CLI for parsing Fountain and outputting screenplay-formatted scripts"
homepage = "https://github.com/adamchalmers/fountain-rs"
repository = "https://github.com/adamchalmers/fountain-rs"
readme = "README.md"
keywords = ["fountain", "parsing", "markup"]
categories = ["command-line-utilities", "text-processing"]
license = "Unlicense OR MIT"

[dependencies]
fountain = { path = "../fountain" }
nom = "5.0.0"

[[bin]]
name = "fountain"
path = "src/main.rs"
