[package]
name = "fountain"
version = "0.1.12"
authors = ["Adam Chalmers <adam.s.chalmers@gmail.com>"]
edition = "2018"
description = "Parser and formatter for the Fountain screenplay markup language"
homepage = "https://github.com/adamchalmers/fountain-rs"
repository = "https://github.com/adamchalmers/fountain-rs"
readme = "README.md"
keywords = ["fountain", "parsing", "markup"]
categories = ["command-line-utilities", "text-processing"]
license = "Unlicense OR MIT"

[dependencies]
nom = {version = "6", features = ["alloc"], default-features = false }
serde = { version = "1", features = ["derive"], optional = true }

[features]
use_serde = ["serde"]